--- a/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/6_CVClasificacion_LFW.ipynb
+++ b/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/6_CVClasificacion_LFW.ipynb
@@ -1165,20 +1165,14 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "#Naive_Bayes.GaussianNB:\n",
-        "- [Naive_Bayes.GaussianNB](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html)\n",
-        "\n",
-        "####Modelo:\n",
-        "Basado en el teorema de Bayes con la suposición ingenua de independencia condicional entre las características, dado la clase. Asume que las características siguen una distribución gaussiana (normal).\n",
-        "\n",
-        "####Problema de optimización:\n",
-        "No hay un problema de optimización iterativa en el sentido tradicional. Se calcula directamente la probabilidad a posteriori de cada clase basándose en las medias y varianzas de las características en cada clase (estimación de máxima verosimilitud).\n"
-      ],
+      "cell_type": "code",
       "metadata": {
-        "id": "evm2dCtlo9Ij"
-      }
+        "id": "JNv020cRYoXD",
+        "trusted": true
+      },
+      "source": [],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
