--- a/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/7_ConglomeradosNosupervisado.ipynb
+++ b/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/7_ConglomeradosNosupervisado.ipynb
@@ -7830,12 +7830,201 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Instalar RAPIDS en Colab\n",
+        "!git clone https://github.com/rapidsai/rapidsai-csp-utils.git\n",
+        "%cd rapidsai-csp-utils\n",
+        "!python colab_install.py stable\n"
+      ],
       "metadata": {
         "id": "CrWWbygdsHyh"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cuml\n",
+        "print(\"Versión RAPIDS:\", cuml.__version__)\n"
+      ],
+      "metadata": {
+        "id": "bhbGd81pNZ_X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🎨 Paso 2: Cargar imagen y construir el dataset\n",
+        "Transformamos cada pixel en un punto con características [R, G, B, fila, columna]:"
+      ],
+      "metadata": {
+        "id": "GkBIKOf9Nole"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from skimage.io import imread\n",
+        "from skimage.transform import resize\n",
+        "import numpy as np\n",
+        "\n",
+        "# Cargar imagen de Tanjiro\n",
+        "url = 'https://raw.githubusercontent.com/amalvarezme/AprendizajeMaquina/main/4_Clasificacion_Clustering_DR/imgs/tanjiro.jpg'\n",
+        "image = imread(url)\n",
+        "image = resize(image, (256, 256), anti_aliasing=True)\n",
+        "\n",
+        "h, w, c = image.shape\n",
+        "pixels = image.reshape(-1, 3)\n",
+        "coords = np.indices((h, w)).reshape(2, -1).T / h\n",
+        "X = np.hstack((pixels, coords))  # [R, G, B, fila, columna]\n"
+      ],
+      "metadata": {
+        "id": "22PBW5qxNbxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "🔍 Paso 3: Segmentación con KMeans en GPU (RAPIDS)\n",
+        "\n",
+        "Evaluamos varios valores de\n",
+        "𝑘\n",
+        " y mostramos los scores:"
+      ],
+      "metadata": {
+        "id": "XDZjulCLNvRr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from cuml.cluster import KMeans\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "ks = [3, 5, 7, 9]\n",
+        "scores = []\n",
+        "\n",
+        "for k in ks:\n",
+        "    model = KMeans(n_clusters=k)\n",
+        "    labels = model.fit_predict(X)\n",
+        "    inertia = model.inertia_\n",
+        "    sil = silhouette_score(X, labels)\n",
+        "    scores.append((k, inertia, sil))\n",
+        "    print(f\"k={k} → Inercia={inertia:.2f}, Silhouette={sil:.4f}\")\n",
+        "\n",
+        "    # Visualizar segmentación\n",
+        "    segmented = labels.reshape(h, w)\n",
+        "    plt.subplot(2, 2, ks.index(k)+1)\n",
+        "    plt.imshow(segmented, cmap='tab10')\n",
+        "    plt.title(f\"k={k}\")\n",
+        "    plt.axis('off')\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "SyKu3tKiN_mH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "📐 Paso 4: PCA y UMAP antes de clustering\n",
+        "\n",
+        "🧪 Reducción de dimensionalidad (2D)"
+      ],
+      "metadata": {
+        "id": "NplOWqyhOCqy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from cuml.decomposition import PCA\n",
+        "from cuml import UMAP\n",
+        "\n",
+        "# PCA\n",
+        "pca = PCA(n_components=2)\n",
+        "X_pca = pca.fit_transform(X)\n",
+        "\n",
+        "# UMAP\n",
+        "umap = UMAP(n_components=2)\n",
+        "X_umap = umap.fit_transform(X)\n"
+      ],
+      "metadata": {
+        "id": "Mi-O5ssPOOX5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔁 Clustering con datos proyectados"
+      ],
+      "metadata": {
+        "id": "ZE84fkYTOU22"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for name, data in zip([\"PCA\", \"UMAP\"], [X_pca, X_umap]):\n",
+        "    print(f\"\\nClustering sobre espacio reducido: {name}\")\n",
+        "    for k in ks:\n",
+        "        model = KMeans(n_clusters=k)\n",
+        "        labels = model.fit_predict(data)\n",
+        "        inertia = model.inertia_\n",
+        "        sil = silhouette_score(data, labels)\n",
+        "        print(f\"{name} k={k} → Inercia={inertia:.2f}, Silhouette={sil:.4f}\")\n"
+      ],
+      "metadata": {
+        "id": "obg888oFOXpP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "📦 Paso 5: Estructura sugerida del notebook"
+      ],
+      "metadata": {
+        "id": "zEAjDHmjOa0A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Segmentación con Clustering No Supervisado\n",
+        "\n",
+        "## 🔧 Instalación y configuración del entorno\n",
+        "(celda de RAPIDS + verificación)\n",
+        "\n",
+        "## 📷 Carga de imagen y preparación de datos\n",
+        "(Transformación RGB + coordenadas → matriz X)\n",
+        "\n",
+        "## 🎨 Clustering con KMeans en GPU\n",
+        "(Evaluación de inercia y silueta para k en [3,5,7,9])\n",
+        "\n",
+        "## 📐 Reducción de dimensión con PCA y UMAP\n",
+        "(Comparación de segmentaciones post-reducción)\n",
+        "\n",
+        "## 📊 Visualizaciones y discusión de resultados\n",
+        "(Graficar segmentación + scores)\n"
+      ],
+      "metadata": {
+        "id": "gBlkLlPXOd1G"
+      }
     }
   ]
 }
