--- a/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/8_ReduccionDimension.ipynb
+++ b/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/8_ReduccionDimension.ipynb
@@ -393,6 +393,78 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "##1. Recupera la formulación generativa de PCA\n",
+        "\n",
+        "Usa la expresión: $$X = ZW^T$$ donde $Z$ es la proyección latente.\n",
+        "\n",
+        "Presenta el problema de optimización: $$\\min_W \\|X - ZW^T\\|_F \\quad \\text{sujeto a } WW^T = I$$\n",
+        "\n",
+        "Puedes ilustrarlo con el ejemplo del Swiss Roll proyectado en 2D usando sklearn.decomposition.PCA.\n",
+        "\n",
+        "##2. Muestra la formulación por varianza preservada\n",
+        "\n",
+        "Incluye la definición de la matriz de covarianza: $$\\Sigma = \\frac{1}{N}X^TX$$\n",
+        "\n",
+        "Expón el problema: $$\\max_W \\text{tr}(W^T \\Sigma W) \\quad \\text{sujeto a } WW^T = I$$\n",
+        "\n",
+        "##3. Contrasta ambos enfoques\n",
+        "\n",
+        "Generativo: busca reconstrucción óptima.\n",
+        "\n",
+        "Varianza: busca explicar la máxima dispersión del conjunto.\n",
+        "\n",
+        "Utiliza explained_variance_ratio_ para evidenciar la proporción explicada por cada componente.\n",
+        "\n",
+        "##4. Complementa con visualización\n",
+        "\n",
+        "Proyecta con pca.fit_transform(X) y recupera con inverse_transform().\n",
+        "\n",
+        "Calcula el error de reconstrucción medio (np.mean(np.sum((X_original - X_reconstructed)**2, axis=1)))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "w1c0xm0WWMjZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#📊 6. Contrasta con el enfoque de preservación de varianza"
+      ],
+      "metadata": {
+        "id": "bC12_1n4ipJT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pca.explained_variance_ratio_)\n"
+      ],
+      "metadata": {
+        "id": "VDlTd3xgii-w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cumsum = np.cumsum(pca.explained_variance_ratio_)\n",
+        "plt.plot(cumsum)\n",
+        "plt.xlabel(\"Número de componentes\")\n",
+        "plt.ylabel(\"Varianza acumulada\")\n",
+        "plt.grid(True)\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "t9arLCxGiuzi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "NSJ1XCEKNlvI"
       },
