--- a/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/8_ReduccionDimension.ipynb
+++ b/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/8_ReduccionDimension.ipynb
@@ -1191,7 +1191,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 284
         },
         "id": "TaJTj6_qTSbF",
         "outputId": "a6b8da17-47b8-4488-816f-5d9cf431a359"
@@ -2486,12 +2486,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "Atj76i8ifucx",
-        "outputId": "1e3d4411-de31-49d4-b899-cb43b9c0e41f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 853
-        }
+        },
+        "id": "Atj76i8ifucx",
+        "outputId": "1e3d4411-de31-49d4-b899-cb43b9c0e41f"
       },
       "execution_count": 45,
       "outputs": [
@@ -2531,12 +2531,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "XjCJxtEJf7rS",
-        "outputId": "cb85e4ed-43d7-4548-b534-a5a31bd1543d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 385
-        }
+        },
+        "id": "XjCJxtEJf7rS",
+        "outputId": "cb85e4ed-43d7-4548-b534-a5a31bd1543d"
       },
       "execution_count": 46,
       "outputs": [
@@ -2579,11 +2579,11 @@
         "analizar_silueta(umap.UMAP(n_components=2).fit_transform(X_train), umap.UMAP, \"UMAP\")\n"
       ],
       "metadata": {
-        "id": "dmETYOKfgH-C",
-        "outputId": "9aedee62-5bcd-4b76-c275-56f2f9ff8bd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dmETYOKfgH-C",
+        "outputId": "9aedee62-5bcd-4b76-c275-56f2f9ff8bd7"
       },
       "execution_count": 48,
       "outputs": [
@@ -2816,6 +2816,88 @@
       },
       "execution_count": 49,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download(\"mnist_eigenfaces.pkl\")\n"
+      ],
+      "metadata": {
+        "id": "EtSKxghsmXLC",
+        "outputId": "90c3b7a0-f91f-4533-e438-d3acafc6885f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_5998517e-6566-4613-9d74-aa8eac22b2f0\", \"mnist_eigenfaces.pkl\", 7566598)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
