--- a/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/8_ReduccionDimension.ipynb
+++ b/Ejercicios_TAM_mayo_29_y_junio_5/4_Clasificacion_Clustering_DR/8_ReduccionDimension.ipynb
@@ -1079,10 +1079,10 @@
         "\n",
         "Donde:\n",
         "\n",
-        "- $$\\Sigma = \\frac{1}{N} X^T X$$ es la matriz de covarianza.\n",
-        "- $$W$$ son los componentes principales (vectores propios de $$\\Sigma$$).\n",
+        "- $\\Sigma = \\frac{1}{N} X^T X$ es la matriz de covarianza.\n",
+        "- $W$ son los componentes principales (vectores propios de $\\Sigma$).\n",
         "\n",
-        "- **Espacio:** la proyección se realiza en el mismo espacio de entrada $$\\mathbb{R}^p$$, por lo que solo captura relaciones **lineales**.\n",
+        "- **Espacio:** la proyección se realiza en el mismo espacio de entrada $\\mathbb{R}^p$, por lo que solo captura relaciones **lineales**.\n",
         "\n",
         "---\n",
         "\n",
@@ -1095,9 +1095,9 @@
         "\\phi: \\mathbb{R}^p \\rightarrow \\mathcal{F}\n",
         "$$\n",
         "\n",
-        "Donde $$\\mathcal{F}$$ es un espacio de alta dimensión (incluso infinito).\n",
+        "Donde $\\mathcal{F}$ es un espacio de alta dimensión (incluso infinito).\n",
         "\n",
-        "- No se calcula $$\\phi(x)$$ directamente; se trabaja con la **matriz kernel**:\n",
+        "- No se calcula $\\phi(x)$ directamente; se trabaja con la **matriz kernel**:\n",
         "\n",
         "$$\n",
         "K_{ij} = \\kappa(x_i, x_j) = \\langle \\phi(x_i), \\phi(x_j) \\rangle\n",
@@ -1109,7 +1109,7 @@
         "K \\alpha = \\lambda \\alpha\n",
         "$$\n",
         "\n",
-        "Se realiza un análisis espectral sobre la matriz $$K$$ en lugar de la covarianza.\n",
+        "Se realiza un análisis espectral sobre la matriz $K$ en lugar de la covarianza.\n",
         "\n",
         "---\n",
         "\n",
@@ -1191,7 +1191,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 284
         },
         "id": "TaJTj6_qTSbF",
         "outputId": "a6b8da17-47b8-4488-816f-5d9cf431a359"
