--- a/Proyecto/Proyecto.ipynb
+++ b/Proyecto/Proyecto.ipynb
@@ -26,6 +26,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 🔍 1. Motivación del Proyecto\n",
+        "\n",
+        "Los potenciales evocados de patrón (PERG) son señales electrofisiológicas que capturan la respuesta de la retina ante estímulos visuales. En el contexto clínico, estas mediciones son fundamentales para detectar enfermedades degenerativas de la retina, como la distrofia macular o el síndrome de Usher.\n",
+        "\n",
+        "Actualmente, el análisis manual de señales PERG requiere expertos entrenados, lo que implica costos elevados, subjetividad en el diagnóstico y limitaciones para su aplicación masiva. Frente a esto, las técnicas de Machine Learning (ML) y Deep Learning (DL) ofrecen una alternativa automatizada, escalable y reproducible para identificar patrones latentes en estas señales y asociarlos a diagnósticos clínicos.\n",
+        "\n",
+        "Este proyecto busca aplicar modelos de ML para analizar un conjunto diverso de mediciones PERG junto con información clínica (edad, diagnóstico preliminar, agudeza visual, etc.) con el fin de construir un sistema que asista en la predicción de diagnósticos oftalmológicos. La relevancia del trabajo es tanto técnica (evaluación de modelos sobre datos fisiológicos reales) como social (mejora en el acceso y calidad del diagnóstico).\n",
+        "\n",
+        "\n",
+        "# 🎯 2. Planteamiento del Problema\n",
+        "\n",
+        "El diagnóstico clínico basado en señales PERG implica interpretar secuencias complejas que reflejan la actividad eléctrica de la retina ante estímulos visuales. Estas señales varían entre pacientes y dependen de múltiples factores, incluyendo edad, historial médico y agudeza visual.\n",
+        "\n",
+        "En este contexto, surge el reto computacional de construir un modelo de clasificación capaz de predecir el diagnóstico primario (`diagnosis1`) a partir de un conjunto de variables fisiológicas y clínicas. El desafío consiste en encontrar patrones discriminativos entre las mediciones PERG (RE_1, LE_1, RE_2, LE_2…) y variables clínicas (edad, agudeza visual, etc.) que permitan identificar enfermedades oftalmológicas con un nivel aceptable de precisión.\n",
+        "\n",
+        "El dataset utilizado es **PERG-IOBA**, compuesto por:\n",
+        "\n",
+        "- Señales PERG de múltiples ojos en distintos instantes (hasta 5 segmentos temporales).\n",
+        "- Información clínica complementaria: edad (`age_years`), sexo, agudeza visual en cada ojo (`va_re_logMar`, `va_le_logMar`) y diagnóstico preliminar.\n",
+        "\n",
+        "**Pregunta de investigación**:\n",
+        "> ¿Puede un modelo de clasificación basado en Random Forest predecir el diagnóstico `diagnosis1` de un paciente utilizando sus mediciones PERG y datos clínicos, con una precisión superior al 85%?\n",
+        "\n",
+        "Esta pregunta guía el desarrollo técnico del proyecto y permite evaluar cuantitativamente la capacidad de los algoritmos ML para asistir en tareas diagnósticas reales.\n",
+        "\n",
+        "\n",
+        "# 📚 3. Estado del Arte\n",
+        "(Sintetiza tres trabajos previos relevantes. Puedes enlazar artículos, repos, papers. Incluye fortalezas y vacíos que tu proyecto aborda.)\n",
+        "\n",
+        "# 🛠️ 4. Objetivos del Proyecto\n",
+        "(Objetivo general + específicos. Ej: desarrollar y evaluar un modelo ML para X, comparar rendimiento de varios enfoques, etc.)\n",
+        "\n",
+        "# 🔄 5. Metodología Propuesta\n",
+        "(Describe en celdas técnicas las etapas: carga, procesamiento, partición, modelos, métricas, mejora de rendimiento)\n",
+        "\n",
+        "# ⚙️ 6. Background de los Modelos\n",
+        "(Celda de texto con descripción técnica del modelo que usas — por qué elegiste Random Forest, qué ventajas tiene para tu tipo de datos)\n",
+        "\n",
+        "# 🧪 7. Experimental Set-Up\n",
+        "(Describe tu entorno Colab, versión de librerías, tamaño del dataset, pipeline experimental)\n",
+        "\n",
+        "# 📊 8. Resultados y Discusión\n",
+        "(Muestra las métricas, gráficas, confusión, etc. Analiza: ¿funcionó bien?, ¿qué limita el rendimiento?, ¿cómo interpretas los resultados?)\n",
+        "\n",
+        "# 🧠 9. Conclusiones y Trabajo Futuro\n",
+        "(Sintetiza qué lograste, qué falta, y qué mejorarías — ej: probar arquitecturas DL, expandir dataset, optimizar pipeline)\n",
+        "\n",
+        "# 📚 10. Referencias\n",
+        "(Lista APA o IEEE de papers, libros, repos que consultaste)\n"
+      ],
+      "metadata": {
+        "id": "INGqG6_DYT5n"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install fpdf"
