--- a/Proyecto/Proyecto.ipynb
+++ b/Proyecto/Proyecto.ipynb
@@ -272,11 +272,11 @@
         "print(f\"\\n🔎 Total de archivos CSV encontrados: {len(csv_encontrados)}\")\n"
       ],
       "metadata": {
-        "id": "ConhgtL7M7J8",
-        "outputId": "3d1bae16-0f4e-4ead-8291-38c9b1fd72b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ConhgtL7M7J8",
+        "outputId": "3d1bae16-0f4e-4ead-8291-38c9b1fd72b8"
       },
       "execution_count": 12,
       "outputs": [
@@ -1086,11 +1086,11 @@
         "print(df_info.head())\n"
       ],
       "metadata": {
-        "id": "rY5OfjnyPgMw",
-        "outputId": "4a8306e9-755f-48ed-c9ee-03d82a1d1333",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rY5OfjnyPgMw",
+        "outputId": "4a8306e9-755f-48ed-c9ee-03d82a1d1333"
       },
       "execution_count": 14,
       "outputs": [
@@ -1641,12 +1641,12 @@
         "df_modelo.head()\n"
       ],
       "metadata": {
-        "id": "jIJVk45EQh6y",
-        "outputId": "ea6cf944-6670-47a4-cdda-b4fd3b543aaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        }
+        },
+        "id": "jIJVk45EQh6y",
+        "outputId": "ea6cf944-6670-47a4-cdda-b4fd3b543aaa"
       },
       "execution_count": 17,
       "outputs": [
@@ -2007,11 +2007,11 @@
         "print(f\"🧪 Train shape: {X_train.shape}, Test shape: {X_test.shape}\")\n"
       ],
       "metadata": {
-        "id": "gaXZlQboQn6F",
-        "outputId": "f8beb0d3-6c39-4e58-d8d5-6f6148ceaaa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gaXZlQboQn6F",
+        "outputId": "f8beb0d3-6c39-4e58-d8d5-6f6148ceaaa6"
       },
       "execution_count": 18,
       "outputs": [
@@ -2089,12 +2089,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "-kJSmjAkRaal",
-        "outputId": "1c505f1c-0274-4992-a425-04e4b0bf2e03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "-kJSmjAkRaal",
+        "outputId": "1c505f1c-0274-4992-a425-04e4b0bf2e03"
       },
       "execution_count": 20,
       "outputs": [
@@ -2164,12 +2164,12 @@
         "df_resultados.head()\n"
       ],
       "metadata": {
-        "id": "AX8CNwVyRjRo",
-        "outputId": "3066e79e-34c4-4834-98c6-09def62ed320",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "AX8CNwVyRjRo",
+        "outputId": "3066e79e-34c4-4834-98c6-09def62ed320"
       },
       "execution_count": 21,
       "outputs": [
@@ -2539,12 +2539,12 @@
         "print(f\"✅ Imagen guardada en: {ruta_imagen}\")\n"
       ],
       "metadata": {
-        "id": "nUuz2krkSKJM",
-        "outputId": "9ce08c8d-3d6b-41b8-b104-c7de8fc81e3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 725
-        }
+        },
+        "id": "nUuz2krkSKJM",
+        "outputId": "9ce08c8d-3d6b-41b8-b104-c7de8fc81e3e"
       },
       "execution_count": 22,
       "outputs": [
@@ -2589,12 +2589,12 @@
         "df_metrics.head()\n"
       ],
       "metadata": {
-        "id": "KgenhQI_SO61",
-        "outputId": "9a404e4c-663e-4559-8e2e-bdd78bad6ae0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        }
+        },
+        "id": "KgenhQI_SO61",
+        "outputId": "9a404e4c-663e-4559-8e2e-bdd78bad6ae0"
       },
       "execution_count": 23,
       "outputs": [
@@ -2937,12 +2937,12 @@
         "df_importancia\n"
       ],
       "metadata": {
-        "id": "SQfWet6-TG2t",
-        "outputId": "b6793950-3541-45c3-86dc-167245afa3fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 919
-        }
+        },
+        "id": "SQfWet6-TG2t",
+        "outputId": "b6793950-3541-45c3-86dc-167245afa3fc"
       },
       "execution_count": 24,
       "outputs": [
@@ -3351,11 +3351,11 @@
         "print(\"✅ Predicciones exportadas.\")\n"
       ],
       "metadata": {
-        "id": "kGBEjJ7rTU2S",
-        "outputId": "d2a63f0b-1f86-44f8-dd8c-474364a4b81f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kGBEjJ7rTU2S",
+        "outputId": "d2a63f0b-1f86-44f8-dd8c-474364a4b81f"
       },
       "execution_count": 25,
       "outputs": [
@@ -3397,11 +3397,11 @@
         "print(\"✅ PDF generado y guardado.\")\n"
       ],
       "metadata": {
-        "id": "ofnhc_M2T-Lp",
-        "outputId": "b8020da0-d7e9-4cf5-d10b-840b56620354",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ofnhc_M2T-Lp",
+        "outputId": "b8020da0-d7e9-4cf5-d10b-840b56620354"
       },
       "execution_count": 26,
       "outputs": [
@@ -3432,11 +3432,11 @@
         "print(f\"📉 Validación cruzada (5 folds):\\nAccuracy promedio: {scores.mean():.3f}\")\n"
       ],
       "metadata": {
-        "id": "NezBqNw2UMMw",
-        "outputId": "b897404e-3c76-4a43-ad73-9b08df6ff774",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NezBqNw2UMMw",
+        "outputId": "b897404e-3c76-4a43-ad73-9b08df6ff774"
       },
       "execution_count": 27,
       "outputs": [
@@ -3478,11 +3478,11 @@
         "y_pred_log = log_clf.predict(X_test_scaled)\n"
       ],
       "metadata": {
-        "id": "3l8KPvc5YVb_",
-        "outputId": "efbfc832-f142-4459-fc78-99253fb4d313",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3l8KPvc5YVb_",
+        "outputId": "efbfc832-f142-4459-fc78-99253fb4d313"
       },
       "execution_count": 28,
       "outputs": [
@@ -3563,12 +3563,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "T8y2ZLG2ZdrF",
-        "outputId": "40b1a27d-1a0d-42e1-8360-fed44c838ba3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "T8y2ZLG2ZdrF",
+        "outputId": "40b1a27d-1a0d-42e1-8360-fed44c838ba3"
       },
       "execution_count": 30,
       "outputs": [
@@ -3651,12 +3651,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "UoEwL-YJZj11",
-        "outputId": "7cab181f-3d71-4dec-fd14-a1a492938916",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "UoEwL-YJZj11",
+        "outputId": "7cab181f-3d71-4dec-fd14-a1a492938916"
       },
       "execution_count": 31,
       "outputs": [
@@ -3777,12 +3777,12 @@
         "df_comparacion.sort_values('F1 Macro', ascending=False)\n"
       ],
       "metadata": {
-        "id": "dWKjnsXLaqJY",
-        "outputId": "7545c671-4d42-4407-d12e-cc1183fa2d73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "dWKjnsXLaqJY",
+        "outputId": "7545c671-4d42-4407-d12e-cc1183fa2d73"
       },
       "execution_count": 35,
       "outputs": [
@@ -4102,6 +4102,26 @@
       ],
       "metadata": {
         "id": "hE5J7B8ea9kU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 📊 Comparación de modelos de clasificación multiclase\n",
+        "\n",
+        "Se evaluaron tres enfoques distintos sobre los datos PERG + clínicos, con métricas **accuracy** y **F1 macro** como criterios principales de comparación.\n",
+        "\n",
+        "| Modelo                      | Accuracy | F1 Macro | Observaciones clave |\n",
+        "|----------------------------|----------|----------|----------------------|\n",
+        "| **Random Forest**          | Alta     | Alta     | Robusto y efectivo con datos tabulares; buen manejo de clases desbalanceadas |\n",
+        "| **Regresión Logística**    | Media    | Media    | Útil como baseline; limitado en relaciones no lineales |\n",
+        "| **MLPClassifier (Red Neuronal)** | Comparable a RF | Similar | Captura relaciones complejas; buen rendimiento general tras entrenamiento |\n",
+        "\n",
+        "> 💡 _Conclusión_: El modelo MLPClassifier mostró desempeño comparable al Random Forest, superando a la Regresión Logística. Esto sugiere que el conjunto de datos presenta patrones no lineales que pueden ser aprovechados por modelos más complejos.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "INEFuuNoh8it"
       }
     }
   ]
