--- a/Proyecto/Proyecto.ipynb
+++ b/Proyecto/Proyecto.ipynb
@@ -261,20 +261,24 @@
         "ruta_destino = \"/content/perg-ioba-dataset/\"\n",
         "csv_encontrados = []\n",
         "\n",
-        "# Recorrer todo el árbol de carpetas\n",
+        "# Recorrer todo el árbol de carpetas sin imprimir cada archivo\n",
         "for root, dirs, files in os.walk(ruta_destino):\n",
         "    for file in files:\n",
         "        if file.lower().endswith(\".csv\"):\n",
         "            ruta_csv = os.path.join(root, file)\n",
         "            csv_encontrados.append(ruta_csv)\n",
-        "            print(\"📄 CSV encontrado:\", ruta_csv)\n",
         "\n",
-        "print(f\"\\n🔎 Total de archivos CSV encontrados: {len(csv_encontrados)}\")\n"
+        "# Solo mostrar mensaje final\n",
+        "if csv_encontrados:\n",
+        "    print(f\"✅ Se encontraron {len(csv_encontrados)} archivos CSV.\")\n",
+        "else:\n",
+        "    print(\"⚠️ No se encontró ningún archivo CSV.\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "ConhgtL7M7J8",
         "outputId": "3d1bae16-0f4e-4ead-8291-38c9b1fd72b8"
       },
@@ -4123,6 +4127,79 @@
       "metadata": {
         "id": "INEFuuNoh8it"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, pickle\n",
+        "\n",
+        "def guardar_o_cargar(archivo, objeto=None, entrenar=False):\n",
+        "    if os.path.exists(archivo):\n",
+        "        with open(archivo, \"rb\") as f:\n",
+        "            return pickle.load(f)\n",
+        "    elif entrenar and objeto is not None:\n",
+        "        with open(archivo, \"wb\") as f:\n",
+        "            pickle.dump(objeto, f)\n",
+        "        print(f\"✅ Artefacto guardado: {archivo}\")\n",
+        "        return objeto\n",
+        "    else:\n",
+        "        print(f\"⚠️ No se encontró {archivo} y no se proporcionó objeto para guardar.\")\n",
+        "        return None\n",
+        "\n",
+        "# Ejemplos de uso:\n",
+        "modelo_rf = guardar_o_cargar(\"artefactos/modelo_rf.pkl\", RandomForestClassifier(...).fit(X_train, y_train), entrenar=True)\n",
+        "modelo_mlp = guardar_o_cargar(\"artefactos/modelo_mlp.pkl\", MLPClassifier(...).fit(X_train, y_train), entrenar=True)\n",
+        "\n",
+        "datos_split = {\"X_train\": X_train, \"X_test\": X_test, \"y_train\": y_train, \"y_test\": y_test}\n",
+        "guardar_o_cargar(\"artefactos/datos_divididos.pkl\", datos_split, entrenar=True)\n",
+        "\n",
+        "resultados = {\"rf\": rf_metrics, \"mlp\": mlp_metrics, \"logreg\": logreg_metrics}\n",
+        "guardar_o_cargar(\"artefactos/resultados.pkl\", resultados, entrenar=True)\n"
+      ],
+      "metadata": {
+        "id": "mRNRCyp6imVr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Montar el Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Guardar artefacto en Drive\n",
+        "import pickle\n",
+        "ruta_drive = '/content/drive/MyDrive/MiProyecto/modelo_rf.pkl'\n",
+        "\n",
+        "with open(ruta_drive, 'wb') as f:\n",
+        "    pickle.dump(modelo_rf, f)\n",
+        "\n",
+        "print(\"✅ Guardado en Drive. Puedes subirlo a GitHub desde tu computador.\")\n"
+      ],
+      "metadata": {
+        "id": "X1qSkWwYi1GN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "\n",
+        "# Guardar localmente y descargar\n",
+        "with open(\"modelo_rf.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(modelo_rf, f)\n",
+        "\n",
+        "files.download(\"modelo_rf.pkl\")  # ⬇️ Se descargará al computador\n"
+      ],
+      "metadata": {
+        "id": "MfH_V08Pi2sy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
